demo-app-v4/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-v4
  labels:
    app: demo-app-v4
    version: v4
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: demo-app-v4
  sessionAffinity: None
  type: ClusterIP
